--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@
     margin-left: 15%;
 }
 
-@media screen and (max-width: 678px) {
+@media screen and (max-width: 1200px) {
     .menu_list {
         display: none;
     }
@@ -134,11 +134,7 @@
 }
 
 .content_top {
-    background-image: url('./assets/pexels-photo-4110882.jpeg');
-    background-size: cover;
-    height: 929px;
     width: 100%;
-    /* background-position-y: -56.6%; */
     display: flex;
     flex-direction: column;
     text-transform: uppercase;
@@ -147,64 +143,78 @@
     font-family: "Jost_Medium";
     justify-content: center;
     align-items: center;
+    position: relative;
+}
+
+.content_top > img {
+    width: 100%;
+    aspect-ratio: 2.7;
+    object-fit: cover;
 }
 
 @media screen and (max-width: 678px) {
-    .content_top {
-        background-position-y: -85px;
+    .content_top > img {
         height: 387px;
     }
 }
 
-.content_top>h2 {
+.texts {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+}
+
+.texts>h2 {
     font-size: 120px;
 }
 
-.content_top>h4 {
+.texts>h4 {
     display: none;
 }
 
-.content_top>h5 {
+.texts>h5 {
     display: none;
 }
 
 @media screen and (min-width: 678px) and (max-width: 1920px) {
-    .content_top>h2 {
+    .texts>h2 {
         display: none;
     }
 
-    .content_top>h4 {
+    .texts>h4 {
         font-size: 100px;
         display: block;
     }
 
-    .content_top>h5 {
+    .texts>h5 {
         display: none;
     }
 }
 
 @media screen and (max-width: 678px) {
-    .content_top>h5 {
+    .texts>h5 {
         font-size: 50px;
         display: block;
     }
 
-    .content_top>h4 {
+    .texts>h4 {
         display: none;
     }
 
-    .content_top>h2 {
+    .texts>h2 {
         display: none;
     }
 }
 
-.content_top>p {
+.texts>p {
     font-size: 35px;
     letter-spacing: 1.75px;
 }
 
 @media screen and (max-width: 678px) {
-    .content_top>p {
+    .texts>p {
         font-size: 16px;
         letter-spacing: 0.8px;
     }
@@ -363,6 +373,7 @@ button {
 .col_5>img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 @media screen and (max-width: 678px) {
@@ -381,6 +392,7 @@ button {
 .col_2>img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 @media screen and (max-width: 678px) {
